Restyle to be more like rest of EAA site

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -71,7 +71,8 @@
 
 <div class="container" >
     <div class="donation-step [[step !== 1 ? 'collapse' : '']]" id="step-1">
-        <p style="margin: 15px 0;">Please select a charity. We will grant 100% of your donation to them.</p>
+        <h1>100% of your donation will be granted directly to the charity of your choice</h1>
+        <h3>Select a charity:</h3>
         <div class="charities-container">
             [[#charities:i]]
                 [[#if show_on_website ]]
@@ -110,39 +111,30 @@
     <div class="donation-step [[(step !== 2 | selected_charity.name==='Against Malaria Foundation') ? 'collapse' : '']]" id="step-2">
         [[#if selected_charity]]
         [[! We need to enclose this in an 'if' to avoid a 404 when the charity is not set but we try to load its logo. ]]
-        <div class="selected-charity-box">
-            <img class="charity-img" src="static/[[ selected_charity.website_image ]]">
-            <p class="donation-info">
-                You have earmarked your donation for [[ selected_charity.name ]].
-                We will grant 100% of your donation to them.
-            </p>
-        </div>
+        <h1>You have chosen [[ selected_charity.name ]].</h1>
         [[/if ]]
 
         <form on-submit="submit" id='pledge-form'>
             {% csrf_token %}
 
-            <h1>How would you like to donate?</h1>
-            <div class="donation-type-section">
-                <div data-toggle="buttons">
-                    <div class="btn-group">
-                        <button type="button"
-                                class="btn btn-lg [[recurring == false ? 'btn-primary' : 'btn-default' ]]"
-                                on-click='@this.set_recurring(false)'>One-Time
-                        </button>
+            <h3>How often will you be donating?</h3>
+            <div class="button-row">
+                <button type="button"
+                        class="btn [[recurring == false ? 'btn-primary' : 'btn-default' ]]"
+                        on-click='@this.set_recurring(false)'>One-Time
+                </button>
 
-                        <button type="button"
-                                class="btn btn-lg [[recurring ? 'btn-primary' : 'btn-default' ]]"
-                            on-click='@this.set_recurring(true)'>Monthly
-                        </button>
-                    </div>
-                </div>
+                <button type="button"
+                        class="btn [[recurring ? 'btn-primary' : 'btn-default' ]]"
+                    on-click='@this.set_recurring(true)'>Monthly
+                </button>
             </div>
 
-            <div class="donation-amount-section">
-                <span class="section-label">
-                    Amount:
-                </span>
+            <h3 class="section-label">
+                How much would you like to donate?
+            </h3>
+
+            <div class="button-row">
                 {% for amt_text, amt_val in form.donation_amounts %}
                     <button type="button"
                             class="btn [[donation_amount === {{ amt_val }} ? 'btn-primary' : 'btn-default' ]]"
@@ -268,7 +260,7 @@
                 </div>
             </div>
 
-            <p>
+            <p class="help-text">
                 Having a problem donating? Please let us know at <a href="mailto://info@effectivealtruiusm.org.au">info@effectivealtruism.org.au</a>.
             </p>
 
