--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -3,10 +3,19 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+h1 {
+    font-size: 26px;
+    color: rgba(0,0,0,0.54);
+}
+
+h3 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .container {
     max-width: 900px;
     width: auto;
-    text-align: center;
 }
 
 .container:before {
@@ -23,6 +32,15 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 
+}
+
+.charities-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: space-between;
+    margin: -12px;
 }
 
 .charity {
@@ -67,6 +85,7 @@ body {
 }
 
 .charity-info .charity-title {
+    text-align: center;
     font-weight: normal;
     font-size: 15px;
     padding: 10px;
@@ -171,14 +190,6 @@ body {
     font-size: 28px;
 }
 
-/* Large screens */
-@media (min-width: 768px) {
-    #id_pledge_form {
-        width: 80%;
-        margin: auto;
-    }
-}
-
 .donor-details-section {
 }
 
@@ -190,34 +201,24 @@ body {
 .details-section .long-control-label {
     padding-top: 0;
 }
-
-.donation-amount-section {
+.button-row {
     margin: 12px 0 24px 0;
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     align-items: baseline;
 }
 
-.donation-amount-section .btn {
-    margin: 0 4px 0 0;
+.button-row button {
+    width: 100px;
+    height: 40px;
+    margin: 0 10px 10px 0;
 }
 
-.donation-amount-section span.section-label {
-    margin: 0 8px 0 0;
-}
-
-/* Small screens */
-@media all and (max-width: 500px) {
-    .donation-amount-section {
-        justify-content: flex-start;
-    }
-
-    .donation-amount-section .btn {
-        margin: 0 4px 4px 0;
-    }
+.button-row input {
+    height: 40px;
 }
 
 #form_donation_amount {
@@ -234,6 +235,9 @@ body {
     margin: auto 5px;
 }
 
+p.help-text {
+    text-align: center;
+}
 /* Monochromatic colors of our base color*/
 /* #4c8fb1, #44819f, #3d728d */
 /* Dark tint: #2d556a */
