--- a/static/css/pledge.css
+++ b/static/css/pledge.css
@@ -3,7 +3,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-h1 {
+h2 {
     font-size: 26px;
     color: rgba(0,0,0,0.54);
 }
@@ -22,16 +22,6 @@ h3 {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-}
-
-.col-buffer {
-    margin-bottom: 25px
-}
-
-.top-buffer {
-    margin-top: 20px;
-    margin-bottom: 20px;
-
 }
 
 .charities-container {
@@ -105,6 +95,7 @@ h3 {
     text-decoration: none;
     color: #fff;
     font-weight: normal;
+    text-align: center;
     position: absolute;
     top: 0;
     bottom: 0;
