--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -66,7 +66,7 @@
 
 <div class="container" >
     <div class="donation-step [[step !== 1 ? 'collapse' : '']]" id="step-1">
-        <h2>100% of your donation will be granted directly to the charity of your choice</h2>
+        <h2>100% of your donation will be granted to the charity of your choice</h2>
         <h3>Select a charity:</h3>
         <div class="charities-container">
             [[#charities:i]]
