--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -286,10 +286,26 @@
         </div>
     </div>
 
-    <div class="donation-step" id="step-3">
+    <div class="donation-step [[step !== 3 ? 'collapse' : '']]" id="step-3">
         <div class="col-xs-6 col-md-offset-3">
             <div class="col-md-12">
+You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your donation will go directly to helping people through Schistosomiasis Control Initiative and send you a tax deductible receipt.
 
+What to do next?
+Please make sure that you complete the process by making a bank transfer of $2 to
+Account Name: Effective Altruism Australia
+BSB: 083170
+Account No: 306556167
+Unique Reference Number: [[ bank_reference ]]
+
+Please email us if you have any questions.
+
+Best and thanks,
+The team at Effective Altruism Australia
+
+
+
+We have also emailed you these instructions – please check your spam folder if you have not received them.
             </div>
         </div>
     </div>
@@ -314,7 +330,8 @@
             has_pin_errors: false,
             pin_error_description: null,
             pin_error_messages: null,
-            submit_enabled: true
+            submit_enabled: true,
+            bank_reference: null
         },
         delimiters: ['[[', ']]'],
 
@@ -474,13 +491,14 @@
         }
     }
 
-    function submitForm() {
-        var data = {
-            // Extra fields that Django wants, that aren't in the form data:
-            payment_method: ractive.get('pmt_method'),
-            recipient_org: ractive.get('selected_charity_id'),
-            recurring: ractive.get('recurring')
-        };
+    function submitForm(data) {
+        if (!data) {
+            data = {}
+        }
+        // Extra fields that Django wants, that aren't in the form data:
+        data['payment_method'] = ractive.get('pmt_method');
+        data['recipient_org'] = ractive.get('selected_charity_id');
+        data['recurring'] = ractive.get('recurring');
 
         // We needed to name the credit card fields for jQuery.validator to work
         // but we don't want to submit them, so get rid of the names now.
@@ -506,6 +524,13 @@
             success : function(json) {
                 console.log(json); // log the returned json to the console
                 console.log("'success' response received"); // another sanity check
+                if (json['payment_method']==='1') {
+                    ractive.set({
+                        step: 3,
+                        bank_reference: json['bank_reference']
+                    });
+                }
+
             },
 
             // handle a non-successful response
