--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -59,36 +59,36 @@
     <div class="form-group">
         <label class="control-label labels col-sm-3" for="address-line1">Billing Address</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control cc-form" id="address-line1" placeholder="Address Line 1" required aria-required/>
+            <input type="text" class="form-control cc-form" id="address-line1" name="cardAddress" placeholder="Address Line 1" required aria-required/>
         </div>
     </div>
 
     <div class="form-group">
         <label class="control-label sr-only labels" hidden aria-hidden for="address-line2">Billing Address line 2</label>
         <div class="col-sm-9 col-sm-offset-3">
-            <input type="text" class="form-control cc-form" id="address-line2" placeholder="Address Line 2"/>
+            <input type="text" class="form-control cc-form" id="address-line2" name="cardAddress2" placeholder="Address Line 2"/>
         </div>
     </div>
 
     <div class="form-group">
         <label class="control-label labels col-sm-3 visible-xs" for="address-city">City</label>
         <div class="col-sm-3 col-sm-offset-3">
-            <input type="text" class="form-control cc-form" id="address-city" placeholder="City" required aria-required/>
+            <input type="text" class="form-control cc-form" id="address-city" name="cardCity" placeholder="City" required aria-required/>
         </div>
         <label class="control-label labels col-sm-3 visible-xs" for="address-state">State</label>
         <div class="col-sm-3">
-            <input type="text" class="form-control cc-form" id="address-state" placeholder="State"/>
+            <input type="text" class="form-control cc-form" id="address-state" name="cardState" placeholder="State"/>
         </div>
         <label class="control-label labels col-sm-3 visible-xs" for="address-postcode">Postcode</label>
         <div class="col-sm-3">
-            <input type="text" class="form-control cc-form" id="address-postcode" placeholder="Postal Code"/>
+            <input type="text" class="form-control cc-form" id="address-postcode" name="cardPostcode" placeholder="Postal Code"/>
         </div>
     </div>
 
     <div class="form-group">
         <label class="control-label labels col-sm-3" for="address-country">Country</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control cc-form" id="address-country" placeholder="Country" required aria-required/>
+            <input type="text" class="form-control cc-form" id="address-country" name="cardCountry" placeholder="Country" required aria-required/>
         </div>
     </div>
 </fieldset>
