--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -275,26 +275,29 @@
     </div>
 
     <div class="donation-step [[step !== 3 ? 'collapse' : '']]" id="step-3">
-        <div class="col-xs-6 col-md-offset-3">
-            <div class="col-md-12">
-You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of your donation will go directly to helping people through Schistosomiasis Control Initiative and send you a tax deductible receipt.
-
-What to do next?
-Please make sure that you complete the process by making a bank transfer of $2 to
-Account Name: Effective Altruism Australia
-BSB: 083170
-Account No: 306556167
-Unique Reference Number: [[ bank_reference ]]
-
-Please email us if you have any questions.
-
-Best and thanks,
-The team at Effective Altruism Australia
-
-
-
-We have also emailed you these instructions – please check your spam folder if you have not received them.
-            </div>
+        <div class="payment_option [[pmt_method != '1' ? 'collapse' : '' ]]">
+            <p>You've completed the first step. Once you've completed the last step (below), we'll make sure 100% of
+                your donation will go directly to helping people through [[ selected_charity.name ]]
+                and send you a tax deductible receipt.
+            </p>
+            <h3>What to do next?</h3>
+            <p>
+                Please make sure that you complete the process by making a bank transfer of $[[ donation_amount ]] to
+            </p>
+            <p>
+                <strong>Account Name</strong>: Effective Altruism Australia<br>
+                <strong>BSB</strong>: 083170<br>
+                <strong>Account No</strong>: 306556167<br>
+                <strong>Unique Reference Number</strong>: [[ bank_reference ]]
+            </p>
+            <p>Please email us at <a href="mailto://info@effectivealtruiusm.org.au">info@effectivealtruism.org.au</a> if you have any questions.</p>
+            <p>
+                We have also emailed you these instructions &ndash; please check your spam folder if you have not received them.
+            </p>
+            <p>
+                Best wishes and thanks,<br>
+                The team at Effective Altruism Australia
+            </p>
         </div>
     </div>
 </div>
