--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -282,7 +282,13 @@
             </p>
             <h3>What to do next?</h3>
             <p>
-                Please make sure that you complete the process by making a bank transfer of $[[ donation_amount ]] to
+                Please make sure that you complete the process by
+                [[#if recurring]]
+                setting up a monthly periodic payment for
+                [[else]]
+                making a bank transfer of
+                [[/if]]
+                $[[ donation_amount ]] to
             </p>
             <p>
                 <strong>Account Name</strong>: Effective Altruism Australia<br>
