Place label manually to avoid messing up input group addon

--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -27,6 +27,7 @@
                 />
                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
             </div>
+            <label for="cc-number" class="error"></label>
         </div>
     </div>
 
