--- a/donation/templates/receipt.html
+++ b/donation/templates/receipt.html
@@ -269,8 +269,8 @@
       <p><b>Receipt number</b>: {{ unique_reference }}</p>
       <p><b>Name</b>: {{ pledge.first_name }} {{ pledge.last_name }}</p>
       <p><b>Email</b>: {{ pledge.email }}</p>
-      <p><b>Date received</b>: {{ bank_transaction.date }}</p>
-      <p><b>Donation Amount</b>: ${{ bank_transaction.amount}}</p>
+      <p><b>Date received</b>: {{ transaction.date }}</p>
+      <p><b>Donation Amount</b>: ${{ transaction.amount}}</p>
       <p><b>Designation</b>: {{ pledge.recipient_org }}</p>
     </div>
     <div class="receipt-footer">
