Manually place error label

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -149,6 +149,7 @@
                         <span class="input-group-addon">$</span>
                         <input class="form-control" type="number" id="id_amount" step="1" min="2" name="amount" placeholder="Amount" title="" value="[[ donation_amount ]]">
                     </div>
+                    <label id="id_amount-error" class="error" for="id_amount"></label>
                 </div>
             </div>
             <div id="donation-amount-error" ></div>
