--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -265,7 +265,7 @@
                 <button type="submit" class="btn btn-success btn-lg pull-right subscribe"
                         [[#if !submit_enabled]]disabled[[/if]]
                      >
-                    Submit
+                    Donate
                 </button>
                 <div id="other-errors"></div>
             </div>
@@ -336,7 +336,7 @@
 
             <div class="complete-other-info">
                 <p>
-                    We have also emailed you these instructions &ndash; please check your spam folder if you have not received them.
+                    (TODO still) We have also emailed you these instructions &ndash; please check your spam folder if you have not received them.
                 </p>
             </div>
             <p>
