reword pin form

--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -22,7 +22,7 @@
                         class="form-control cc-form"
                         name="cardNumber"
                         id="cc-number"
-                        placeholder="Valid Card Number"
+                        placeholder="Card Number"
                         autocomplete="cc-number"
                 />
                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
