try this hack to resize iframe

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -38,6 +38,7 @@
     <link href="{% static 'css/pledge.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/process_steps.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/credit_card.css' %}" type="text/css" media="all" rel="stylesheet">
+    <script type="text/javascript" src="{% static 'js/iframeResizer.contentWindow.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/charities.js' %}"></script>
 
     {% pin_header %}
