iframeresize was on cdn

--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -34,11 +34,11 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/additional-methods.min.js"></script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/ractive/0.9.0-build-91/ractive.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.8/iframeResizer.contentWindow.min.js"></script>
 
     <link href="{% static 'css/pledge.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/process_steps.css' %}" type="text/css" media="all" rel="stylesheet">
     <link href="{% static 'css/credit_card.css' %}" type="text/css" media="all" rel="stylesheet">
-    <script type="text/javascript" src="{% static 'js/iframeResizer.contentWindow.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/charities.js' %}"></script>
 
     {% pin_header %}
