--- a/pinpayments/templates/pinpayments/pin_form.html
+++ b/pinpayments/templates/pinpayments/pin_form.html
@@ -31,29 +31,33 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label class="control-label labels col-sm-3" for="cc-expiry"><span class="hidden-xs">Expiration</span><span
-                class="visible-xs-inline">Exp</span> date</label>
-        <div class="col-sm-4">
-            <input  name="cardExpiry"
-                    type="tel"
-                    class="form-control cc-form"
-                    id="cc-expiry"
-                    name="cardExpiry"
-                    placeholder="MM / YY"
-                    autocomplete="cc-exp"
-            />
+    <div class="multi-form-group">
+        <div class="form-group col-sm-7" style="">
+            <label class="control-label labels col-sm-3" for="cc-expiry"><span class="hidden-xs">Expiration</span><span
+                    class="visible-xs-inline">Exp</span> date</label>
+            <div class="col-sm-4">
+                <input  name="cardExpiry"
+                        type="tel"
+                        class="form-control cc-form"
+                        id="cc-expiry"
+                        name="cardExpiry"
+                        placeholder="MM / YY"
+                        autocomplete="cc-exp"
+                />
+            </div>
         </div>
-        <label class="control-label labels col-sm-3" for="cc-cvc">CV code</label>
-        <div class="col-sm-2">
-            <input  name="cardCVC"
-                    type="text"
-                    class="form-control cc-form"
-                    id="cc-cvc"
-                    name="cardCVC"
-                    placeholder="CVC"
-                    autocomplete="cc-csc"
-            />
+        <div class="form-group col-sm-5">
+            <label class="control-label labels col-sm-3" for="cc-cvc">CV code</label>
+            <div class="col-sm-2">
+                <input  name="cardCVC"
+                        type="text"
+                        class="form-control cc-form"
+                        id="cc-cvc"
+                        name="cardCVC"
+                        placeholder="CVC"
+                        autocomplete="cc-csc"
+                />
+            </div>
         </div>
     </div>
 
@@ -71,18 +75,24 @@
         </div>
     </div>
 
-    <div class="form-group">
-        <label class="control-label labels col-sm-3 visible-xs" for="address-city">City</label>
-        <div class="col-sm-3 col-sm-offset-3">
-            <input type="text" class="form-control cc-form" id="address-city" name="cardCity" placeholder="City" required aria-required/>
+    <div class="multi-form-group">
+        <div class="form-group col-sm-6">
+            <label class="control-label labels col-sm-3 visible-xs" for="address-city">City</label>
+            <div class="col-sm-3 col-sm-offset-3">
+                <input type="text" class="form-control cc-form" id="address-city" name="cardCity" placeholder="City" required aria-required/>
+            </div>
         </div>
-        <label class="control-label labels col-sm-3 visible-xs" for="address-state">State</label>
-        <div class="col-sm-3">
-            <input type="text" class="form-control cc-form" id="address-state" name="cardState" placeholder="State"/>
+        <div class="form-group col-sm-3">
+            <label class="control-label labels col-sm-3 visible-xs" for="address-state">State</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control cc-form" id="address-state" name="cardState" placeholder="State"/>
+            </div>
         </div>
-        <label class="control-label labels col-sm-3 visible-xs" for="address-postcode">Postcode</label>
-        <div class="col-sm-3">
-            <input type="text" class="form-control cc-form" id="address-postcode" name="cardPostcode" placeholder="Postal Code"/>
+        <div class="form-group col-sm-3">
+            <label class="control-label labels col-sm-3 visible-xs" for="address-postcode">Postcode</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control cc-form" id="address-postcode" name="cardPostcode" placeholder="Postal Code"/>
+            </div>
         </div>
     </div>
 
