--- a/donation/templates/pledge.html
+++ b/donation/templates/pledge.html
@@ -244,11 +244,12 @@
                         <div class="payment-subsection [[pmt_method != '3' ? 'collapse' : '' ]]" id="id_credit_card">
                             {% pin_form %}
                             [[#if has_pin_errors ]]
-                            <div class="pin-errors">
-                                <h3>[[pin_error_description]]</h3>
-                                [[#pin_error_messages ]]
-                                <p>[[message]]</p>
-                                [[/for]]
+                            <div class="row">
+                                <div class="pin-errors col-sm-offset-3 col-sm-9">
+                                    [[#pin_error_messages ]]
+                                    <p class="error-text">[[message]]</p>
+                                    [[/for]]
+                                </div>
                             </div>
                             [[/if]]
                         </div>
